src/objects/QIRS_Administrators_Info__c.object
<CustomObject>
    <fields>
        <fullName>Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell_Number__c</fullName>
        <label>Cell Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E mail</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <label>Administrators Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>E_mail__c</columns>
        <columns>Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Administrators Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>